frontend/test/should_pass/retype_007.grg
using attrib_model_001;

rule r {
	-e:EINT->;

	modify {
		- f:EBOOL<e> ->;
	}
}
